@@ -4,8 +4,13 @@ ISSUES:
 
 1.7-5
 
+* fix so that 'main' is not ignored by plot.gam (got broken in 1.7-0 
+  object orientation of smooth plotting)
+
+* Duchon spline constructor now catches k > number of data errors.
+
 * fix of a gamm bug whereby a model with no smooths would fail after 
-fitting becuase of a missing smoothing parameter vector.
+  fitting because of a missing smoothing parameter vector.
 
 * fix to bug introduced to gam/bam in 1.7-3, whereby '...' were passed to 
   gam.control, instead of passing on to fitting routines. 
